--- a/public/style.css
+++ b/public/style.css
@@ -811,6 +811,7 @@ video {
 
 @media (min-width: 1280px){
   .container-sidebar-icon{
+    margin-bottom: 6px;
     display: flex;
     height: 3.5rem;
     width: 100%;
@@ -891,10 +892,6 @@ video {
   position: relative;
 }
 
-.inset-0{
-  inset: 0px;
-}
-
 .-bottom-2{
   bottom: -0.5rem;
 }
@@ -915,6 +912,10 @@ video {
   right: -300px;
 }
 
+.bottom-3{
+  bottom: 0.75rem;
+}
+
 .right-0{
   right: 0px;
 }
@@ -923,24 +924,16 @@ video {
   right: 0.5rem;
 }
 
+.right-3{
+  right: 0.75rem;
+}
+
 .right-4{
   right: 1rem;
 }
 
 .top-1\/2{
   top: 50%;
-}
-
-.bottom-0{
-  bottom: 0px;
-}
-
-.bottom-3{
-  bottom: 0.75rem;
-}
-
-.right-3{
-  right: 0.75rem;
 }
 
 .-z-10{
@@ -957,10 +950,6 @@ video {
 
 .order-6{
   order: 6;
-}
-
-.m-2{
-  margin: 0.5rem;
 }
 
 .mx-1{
@@ -1043,18 +1032,6 @@ video {
 
 .mt-auto{
   margin-top: auto;
-}
-
-.mb-6{
-  margin-bottom: 1.5rem;
-}
-
-.ml-3{
-  margin-left: 0.75rem;
-}
-
-.mb-3{
-  margin-bottom: 0.75rem;
 }
 
 .block{
@@ -1178,22 +1155,6 @@ video {
   height: 100vh;
 }
 
-.h-\[calc\]{
-  height: calc;
-}
-
-.h-\[calc\(100\)\]{
-  height: calc(100);
-}
-
-.h-\[calc\(100\%\)\]{
-  height: calc(100%);
-}
-
-.h-\[100vh-73px\]{
-  height: 100vh-73px;
-}
-
 .w-1\/2{
   width: 50%;
 }
@@ -1232,6 +1193,10 @@ video {
 
 .w-20{
   width: 5rem;
+}
+
+.w-24{
+  width: 6rem;
 }
 
 .w-3\/4{
@@ -1278,6 +1243,14 @@ video {
   width: 365px;
 }
 
+.w-\[40\%\]{
+  width: 40%;
+}
+
+.w-\[60\%\]{
+  width: 60%;
+}
+
 .w-\[calc\(100\%-90px\)\]{
   width: calc(100% - 90px);
 }
@@ -1290,32 +1263,8 @@ video {
   width: 100vw;
 }
 
-.w-\[40\%\]{
-  width: 40%;
-}
-
-.w-\[60\%\]{
-  width: 60%;
-}
-
-.w-24{
-  width: 6rem;
-}
-
-.w-28{
-  width: 7rem;
-}
-
 .max-w-7xl{
   max-width: 80rem;
-}
-
-.max-w-md{
-  max-width: 28rem;
-}
-
-.max-w-xl{
-  max-width: 36rem;
 }
 
 .flex-none{
@@ -1440,16 +1389,21 @@ video {
   border-width: 1px;
 }
 
-.border-\[1px\]{
-  border-width: 1px;
-}
-
 .border-2{
   border-width: 2px;
 }
 
+.border-\[1px\]{
+  border-width: 1px;
+}
+
 .border-dashed{
   border-style: dashed;
+}
+
+.border-d-accent{
+  --tw-border-opacity: 1;
+  border-color: rgb(42 134 254 / var(--tw-border-opacity));
 }
 
 .border-d-bgc{
@@ -1459,11 +1413,6 @@ video {
 
 .border-transparent{
   border-color: transparent;
-}
-
-.border-d-accent{
-  --tw-border-opacity: 1;
-  border-color: rgb(42 134 254 / var(--tw-border-opacity));
 }
 
 .bg-blue-600{
@@ -1510,21 +1459,6 @@ video {
   background-color: rgb(153 27 27 / var(--tw-bg-opacity));
 }
 
-.bg-blue-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
-}
-
-.bg-gray-100{
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
-}
-
-.bg-white{
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
 .bg-cover{
   background-size: cover;
 }
@@ -1541,16 +1475,12 @@ video {
   padding: 0.625rem;
 }
 
-.p-4{
-  padding: 1rem;
-}
-
-.p-8{
-  padding: 2rem;
-}
-
 .p-3{
   padding: 0.75rem;
+}
+
+.p-4{
+  padding: 1rem;
 }
 
 .px-1{
@@ -1645,10 +1575,6 @@ video {
   padding-top: 0.5rem;
 }
 
-.pl-3{
-  padding-left: 0.75rem;
-}
-
 .text-left{
   text-align: left;
 }
@@ -1725,10 +1651,6 @@ video {
   font-weight: 600;
 }
 
-.leading-5{
-  line-height: 1.25rem;
-}
-
 .tracking-tight{
   letter-spacing: -0.025em;
 }
@@ -1772,16 +1694,6 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-gray-400{
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
-}
-
-.text-gray-700{
-  --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
-}
-
 .underline{
   text-decoration-line: underline;
 }
@@ -1813,12 +1725,6 @@ video {
 .shadow-lg{
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-md{
-  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1870,14 +1776,6 @@ video {
   transition-duration: 300ms;
 }
 
-.duration-150{
-  transition-duration: 150ms;
-}
-
-.ease-in-out{
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 .transition-300{
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -1899,11 +1797,6 @@ video {
   content: var(--tw-content);
 }
 
-.hover\:border-blue-500:hover{
-  --tw-border-opacity: 1;
-  border-color: rgb(59 130 246 / var(--tw-border-opacity));
-}
-
 .hover\:bg-blue-700:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(29 78 216 / var(--tw-bg-opacity));
@@ -1914,11 +1807,6 @@ video {
   background-color: rgb(39 41 47 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-blue-600:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
-}
-
 .hover\:text-blue-700:hover{
   --tw-text-opacity: 1;
   color: rgb(29 78 216 / var(--tw-text-opacity));
@@ -1926,11 +1814,6 @@ video {
 
 .hover\:opacity-100:hover{
   opacity: 1;
-}
-
-.focus\:border-blue-500:focus{
-  --tw-border-opacity: 1;
-  border-color: rgb(59 130 246 / var(--tw-border-opacity));
 }
 
 .focus\:outline-none:focus{
@@ -2047,15 +1930,6 @@ video {
   .sm\:text-9xl{
     font-size: 8rem;
     line-height: 1;
-  }
-
-  .sm\:text-sm{
-    font-size: 0.875rem;
-    line-height: 1.25rem;
-  }
-
-  .sm\:leading-5{
-    line-height: 1.25rem;
   }
 }
 
@@ -2381,11 +2255,6 @@ video {
     order: 5;
   }
 
-  .xl\:my-3{
-    margin-top: 0.75rem;
-    margin-bottom: 0.75rem;
-  }
-
   .xl\:-mb-1{
     margin-bottom: -0.25rem;
   }
@@ -2412,14 +2281,6 @@ video {
 
   .xl\:h-14{
     height: 3.5rem;
-  }
-
-  .xl\:h-\[calc\(100\%-73px\)\]{
-    height: calc(100% - 73px);
-  }
-
-  .xl\:h-full{
-    height: 100%;
   }
 
   .xl\:w-14{
@@ -2453,41 +2314,5 @@ video {
 
   .xl\:p-2{
     padding: 0.5rem;
-  }
-
-  .xl\:p-4{
-    padding: 1rem;
-  }
-
-  .xl\:p-5{
-    padding: 1.25rem;
-  }
-
-  .xl\:p-8{
-    padding: 2rem;
-  }
-
-  .xl\:p-3{
-    padding: 0.75rem;
-  }
-
-  .xl\:px-1{
-    padding-left: 0.25rem;
-    padding-right: 0.25rem;
-  }
-
-  .xl\:px-2{
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
-  }
-
-  .xl\:px-4{
-    padding-left: 1rem;
-    padding-right: 1rem;
-  }
-
-  .xl\:px-5{
-    padding-left: 1.25rem;
-    padding-right: 1.25rem;
   }
 }
