add comment section design

--- a/public/style.css
+++ b/public/style.css
@@ -745,6 +745,7 @@ video {
   position: fixed;
   bottom: 0px;
   left: 0px;
+  z-index: 50;
   display: flex;
   height: 3.5rem;
   width: 100%;
@@ -912,6 +913,10 @@ video {
   right: -300px;
 }
 
+.left-0{
+  left: 0px;
+}
+
 .right-0{
   right: 0px;
 }
@@ -928,12 +933,8 @@ video {
   top: 50%;
 }
 
-.left-0{
-  left: 0px;
-}
-
-.top-0{
-  top: 0px;
+.top-\[61px\]{
+  top: 61px;
 }
 
 .-z-10{
@@ -942,6 +943,10 @@ video {
 
 .z-10{
   z-index: 10;
+}
+
+.z-\[999\]{
+  z-index: 999;
 }
 
 .order-2{
@@ -1145,12 +1150,20 @@ video {
   height: 55%;
 }
 
+.h-\[80\%\]{
+  height: 80%;
+}
+
 .h-\[calc\(100\%-36px\)\]{
   height: calc(100% - 36px);
 }
 
 .h-\[calc\(100\%-37px\)\]{
   height: calc(100% - 37px);
+}
+
+.h-\[calc\(100vh-61px\)\]{
+  height: calc(100vh - 61px);
 }
 
 .h-\[calc\(100vh-73px\)\]{
@@ -1241,12 +1254,20 @@ video {
   width: 128px;
 }
 
+.w-\[15\%\]{
+  width: 15%;
+}
+
 .w-\[28\%\]{
   width: 28%;
 }
 
 .w-\[365px\]{
   width: 365px;
+}
+
+.w-\[80\%\]{
+  width: 80%;
 }
 
 .w-\[calc\(100\%-90px\)\]{
@@ -1261,12 +1282,16 @@ video {
   width: 100vw;
 }
 
-.w-1\/4{
-  width: 25%;
-}
-
 .max-w-7xl{
   max-width: 80rem;
+}
+
+.max-w-screen-md{
+  max-width: 768px;
+}
+
+.flex-1{
+  flex: 1 1 0%;
 }
 
 .flex-none{
@@ -1298,6 +1323,10 @@ video {
   animation: bounce 5s ease-in-out infinite;
 }
 
+.cursor-auto{
+  cursor: auto;
+}
+
 .cursor-pointer{
   cursor: pointer;
 }
@@ -1324,6 +1353,10 @@ video {
 
 .content-center{
   align-content: center;
+}
+
+.items-start{
+  align-items: flex-start;
 }
 
 .items-center{
@@ -1359,10 +1392,10 @@ video {
        column-gap: 0.75rem;
 }
 
-.space-y-4 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+.space-x-2 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .place-self-end{
@@ -1425,6 +1458,14 @@ video {
   border-width: 2px;
 }
 
+.border-b{
+  border-bottom-width: 1px;
+}
+
+.border-t{
+  border-top-width: 1px;
+}
+
 .border-dashed{
   border-style: dashed;
 }
@@ -1438,8 +1479,27 @@ video {
   border-color: rgb(42 134 254 / var(--tw-border-opacity));
 }
 
+.border-d-secondary{
+  --tw-border-opacity: 1;
+  border-color: rgb(39 41 47 / var(--tw-border-opacity));
+}
+
+.border-d-text{
+  --tw-border-opacity: 1;
+  border-color: rgb(214 215 216 / var(--tw-border-opacity));
+}
+
 .border-transparent{
   border-color: transparent;
+}
+
+.border-d-bgc{
+  --tw-border-opacity: 1;
+  border-color: rgb(23 24 28 / var(--tw-border-opacity));
+}
+
+.bg-\[rgba\(214\2c 215\2c 216\2c 0\.4\)\]{
+  background-color: rgba(214,215,216,0.4);
 }
 
 .bg-blue-600{
@@ -1484,11 +1544,6 @@ video {
 .bg-red-800{
   --tw-bg-opacity: 1;
   background-color: rgb(153 27 27 / var(--tw-bg-opacity));
-}
-
-.bg-gray-800{
-  --tw-bg-opacity: 1;
-  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
 
 .bg-cover{
@@ -1701,6 +1756,10 @@ video {
   font-weight: 500;
 }
 
+.font-normal{
+  font-weight: 400;
+}
+
 .font-semibold{
   font-weight: 600;
 }
@@ -1773,6 +1832,10 @@ video {
   opacity: 0.8;
 }
 
+.opacity-90{
+  opacity: 0.9;
+}
+
 .shadow-\[inset_0_2px_4px_0_rgba\(0\2c 0\2c 0\2c 0\.15\)\]{
   --tw-shadow: inset 0 2px 4px 0 rgba(0,0,0,0.15);
   --tw-shadow-colored: inset 0 2px 4px 0 var(--tw-shadow-color);
@@ -1833,6 +1896,14 @@ video {
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
+}
+
+.delay-300{
+  transition-delay: 300ms;
+}
+
+.delay-150{
+  transition-delay: 150ms;
 }
 
 .duration-300{
@@ -2044,6 +2115,10 @@ video {
 }
 
 @media (min-width: 768px){
+  .md\:top-\[73px\]{
+    top: 73px;
+  }
+
   .md\:my-2{
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
@@ -2081,6 +2156,10 @@ video {
     height: 50px;
   }
 
+  .md\:h-\[calc\(100vh-73px\)\]{
+    height: calc(100vh - 73px);
+  }
+
   .md\:w-16{
     width: 4rem;
   }
@@ -2093,6 +2172,10 @@ video {
     width: 75%;
   }
 
+  .md\:w-4\/5{
+    width: 80%;
+  }
+
   .md\:w-40{
     width: 10rem;
   }
@@ -2103,6 +2186,10 @@ video {
 
   .md\:w-\[256px\]{
     width: 256px;
+  }
+
+  .md\:justify-center{
+    justify-content: center;
   }
 
   .md\:rounded-xl{
@@ -2395,11 +2482,6 @@ video {
 
   .xl\:rounded-lg{
     border-radius: 0.5rem;
-  }
-
-  .xl\:bg-d-secondary{
-    --tw-bg-opacity: 1;
-    background-color: rgb(39 41 47 / var(--tw-bg-opacity));
   }
 
   .xl\:p-2{
