--- a/public/style.css
+++ b/public/style.css
@@ -928,14 +928,6 @@ video {
   top: 50%;
 }
 
-.left-0{
-  left: 0px;
-}
-
-.top-0{
-  top: 0px;
-}
-
 .-z-10{
   z-index: -10;
 }
@@ -1261,10 +1253,6 @@ video {
   width: 100vw;
 }
 
-.w-1\/4{
-  width: 25%;
-}
-
 .max-w-7xl{
   max-width: 80rem;
 }
@@ -1357,12 +1345,6 @@ video {
 .gap-x-3{
   -moz-column-gap: 0.75rem;
        column-gap: 0.75rem;
-}
-
-.space-y-4 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 
 .place-self-end{
@@ -1486,13 +1468,12 @@ video {
   background-color: rgb(153 27 27 / var(--tw-bg-opacity));
 }
 
-.bg-gray-800{
-  --tw-bg-opacity: 1;
-  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
-}
-
 .bg-cover{
   background-size: cover;
+}
+
+.p-1{
+  padding: 0.25rem;
 }
 
 .p-2{
@@ -1617,6 +1598,15 @@ video {
 
 .pt-5{
   padding-top: 1.25rem;
+}
+
+.pl-2{
+  padding-left: 0.5rem;
+}
+
+.ps-2{
+  -webkit-padding-start: 0.5rem;
+          padding-inline-start: 0.5rem;
 }
 
 .text-left{
@@ -2395,11 +2385,6 @@ video {
 
   .xl\:rounded-lg{
     border-radius: 0.5rem;
-  }
-
-  .xl\:bg-d-secondary{
-    --tw-bg-opacity: 1;
-    background-color: rgb(39 41 47 / var(--tw-bg-opacity));
   }
 
   .xl\:p-2{
