--- a/public/style.css
+++ b/public/style.css
@@ -957,6 +957,10 @@ video {
   order: 6;
 }
 
+.float-left{
+  float: left;
+}
+
 .mx-2{
   margin-left: 0.5rem;
   margin-right: 0.5rem;
@@ -1178,8 +1182,8 @@ video {
   height: 100vh;
 }
 
-.h-60{
-  height: 15rem;
+.h-1{
+  height: 0.25rem;
 }
 
 .w-1\/2{
@@ -1699,11 +1703,6 @@ video {
   line-height: 2.25rem;
 }
 
-.text-4xl{
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-
 .text-7xl{
   font-size: 4.5rem;
   line-height: 1;
@@ -1810,11 +1809,6 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-slate-500{
-  --tw-text-opacity: 1;
-  color: rgb(100 116 139 / var(--tw-text-opacity));
-}
-
 .underline{
   text-decoration-line: underline;
 }
@@ -1911,41 +1905,6 @@ video {
   transition-duration: 300ms;
 }
 
-.file\:content-center::file-selector-button{
-  align-content: center;
-}
-
-.file\:rounded-none::file-selector-button{
-  border-radius: 0px;
-}
-
-.file\:border-none::file-selector-button{
-  border-style: none;
-}
-
-.file\:bg-d-secondary::file-selector-button{
-  --tw-bg-opacity: 1;
-  background-color: rgb(39 41 47 / var(--tw-bg-opacity));
-}
-
-.file\:text-center::file-selector-button{
-  text-align: center;
-}
-
-.file\:text-sm::file-selector-button{
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
-.file\:font-semibold::file-selector-button{
-  font-weight: 600;
-}
-
-.file\:text-d-text::file-selector-button{
-  --tw-text-opacity: 1;
-  color: rgb(214 215 216 / var(--tw-text-opacity));
-}
-
 .backdrop\:cursor-pointer::backdrop{
   cursor: pointer;
 }
@@ -1983,11 +1942,6 @@ video {
 
 .hover\:opacity-100:hover{
   opacity: 1;
-}
-
-.hover\:file\:bg-slate-300::file-selector-button:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(203 213 225 / var(--tw-bg-opacity));
 }
 
 .focus\:outline-none:focus{
@@ -2091,6 +2045,11 @@ video {
   .sm\:px-6{
     padding-left: 1.5rem;
     padding-right: 1.5rem;
+  }
+
+  .sm\:px-4{
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 
   .sm\:text-3xl{
@@ -2197,6 +2156,11 @@ video {
 
   .md\:p-7{
     padding: 1.75rem;
+  }
+
+  .md\:px-4{
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 
   .md\:pb-4{
